<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pedesaan"
    tools:context=".Materi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="@dimen/five"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/_txt_title_materi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="4sp"
                android:text="@string/title_materi"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_materi"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_organik"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_organik_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_anorganik"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_anorganik_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_plastik"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_plastik_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_logam"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_logam_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_kaca"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_kaca_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_kertas_tumbuhan"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five"
                android:gravity="center"
                android:text="@string/sampah_kertas_tumbuhan_is"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>