<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <include
        android:id="@+id/_toolbar_game"
        layout="@layout/general_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:alpha="0.3"
        android:background="@drawable/background_pedesaan"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/_toolbar_game"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/_relative_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/_btn_finish_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/finish"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/_title_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/_txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_materi"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/_title_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/_txt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/title_materi"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/_btn_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/start"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:id="@+id/_linear_question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/_relative_top"
            android:layout_marginTop="@dimen/ten"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/_img_question"
                android:layout_width="@dimen/question"
                android:layout_height="@dimen/question"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/_txt_title_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:gravity="center"
                android:text="@string/choose"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="casual" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_two"
                android:layout_marginTop="@dimen/fifty"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/_img_tong_organik"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong2"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/_img_tong_anorganik"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong1"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/_img_tong_plastik"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong6"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/_img_tong_logam"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong5"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/_img_tong_kaca"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong3"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/_img_tong_kertas_tumbuhan"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tong"
                    android:layout_weight="1"
                    android:src="@drawable/tong4"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>